# gevulot-fil

./: .gitignore  Cargo.toml  README.md
crates/damocles-plugin/: Cargo.toml
crates/damocles-plugin/src/: filestorage.rs  gevulot.rs  logging.rs  main.rs  processor.rs
crates/damocles-plugin/src/gevulot/: local.rs  rpc.rs
crates/damocles-plugin/src/processor/: c2.rs  windowpost.rs
crates/gevulot-fil/: Cargo.toml
crates/gevulot-fil/src/: codec.rs  lib.rs
crates/paramfetch/: Cargo.toml  parameters.json
crates/paramfetch/src/: main.rs
crates/prover/: Cargo.toml
crates/windowpost-api/: Cargo.toml
crates/windowpost-api/src/: caches.rs  lib.rs  proof.rs  types.rs  util.rs
dataset/: c2-input-8MiB.bincode.zst
filecoin-proof-parameters/: v28-stacked-proof-of-replication-merkletree-poseidon_hasher-8-0-0-sha256_hasher-ecd683648512ab1765faa2a5f14bab48f676e633467f0aa8aad4b55dcb0652bb.params  v28-stacked-proof-of-replication-merkletree-poseidon_hasher-8-0-0-sha256_hasher-ecd683648512ab1765faa2a5f14bab48f676e633467f0aa8aad4b55dcb0652bb.vk  v28-stacked-proof-of-replication-merkletree-poseidon_hasher-8-8-0-sha256_hasher-82a357d2f2ca81dc61bb45f4a762807aedee1b0a53fd6c4e77b46a01bfef7820.params  v28-stacked-proof-of-replication-merkletree-poseidon_hasher-8-8-0-sha256_hasher-82a357d2f2ca81dc61bb45f4a762807aedee1b0a53fd6c4e77b46a01bfef7820.vk
manifest/: c2-prover.json  c2-test.json  c2-verifier.json  device-query.json
