[package]
name = "gevulot-fil-damocles-plugin"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
anyhow = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "time"] }
libc = "0.2"
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
base64 = { version = "0.22.1" }
mimalloc = { workspace = true }
warp = "0.3.7"
opendal = { version = "0.46.0", features = [
    "layers-minitrace",
    "layers-async-backtrace",
    "services-s3",
    "services-fs",
] }
reqwest = { workspace = true }
url = "2.5.0"
hex = "0.4.3"
clap = { version = "4.2", features = ["derive", "env"] }

filecoin-proofs-api = { workspace = true }
gevulot-common = { workspace = true }
gevulot-node = { workspace = true }
gevulot-fil = { path = "../gevulot-fil" }
vc-processors = { git = "https://github.com/ipfs-force-community/damocles.git", rev = "911d319", default-features = false, features = [
    "numa",
] }
windowpost-api = { path = "../windowpost-api" }
forest_address = { version = "0.3" }

[build-dependencies]
vergen = { version = "8.3.0", features = ["build", "git", "git2"] }
