[package]
name = "gevulot-fil"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
filecoin-proofs-api = { workspace = true }
gevulot-common = { workspace = true }
gevulot-node = { workspace = true }
bincode = "1.3.3"
zstd = "0.13.1"
libsecp256k1 = "0.7"
blake3 = { workspace = true }
