[package]
name = "gevulot-fil-prover"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

filecoin-proofs-api = { workspace = true }
gevulot-common = { workspace = true }
gevulot-shim = { workspace = true }
gevulot-fil = { path = "../gevulot-fil" }
